--- a/style/projects.css
+++ b/style/projects.css
@@ -2,11 +2,50 @@ main {
     margin-left: 3rem;
     display: flex;
     gap: 1rem;
+    padding: 1rem 1.5rem;
 }
 
 section {
-    width: 10rem;
-    height: 10rem;
-    background-color: rgb(200, 200, 200);
-    border: 1px solid black;
+    background-color: rgb(80, 80, 80);
+    width: 20rem;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+section h2 a {
+    text-decoration: none;
+    color: white;
+}
+
+section p {
+    color: white;
+}
+
+.projects {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.projects .newest, .projects .all, .projects .mostWatched {
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+}
+
+.projects span {
+    color: white;
+    margin-top: 1rem;
+}
+
+.projects p {
+    margin-top: 1rem;
+}
+
+@media (max-width: 1919px) {
+    section {
+        width: 15rem;
+    }
 }
