--- a/backend/src/main/resources/static/style/main.css
+++ b/backend/src/main/resources/static/style/main.css
@@ -6,6 +6,7 @@
 
   font-family: "Atkinson Hyperlegible Mono", sans-serif;
   font-optical-sizing: auto;
+  letter-spacing: -0.75px;
 }
 
 .horizontal-nav {
@@ -17,6 +18,7 @@
   background-color: rgb(80, 80, 80);
   height: 100vh;
   width: 3rem;
+  z-index: 3;
 }
 
 .horizontal-nav #admin-toggle {
